app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "nav";
@import "question_card";

/* custom colors // HT FLAT-UI */
$light-blue: #3498DB;
$dark-blue: #2980B9;
$light-orange: #E67E22;
$dark-orange: #D35400;
$light-yellow: #F1C40F;
$dark-yellow: #F39C12;
$light-white: #ECF0F1;
$dark-white: #BDC3C7;
$light-grey: #95A5A6;
$dark-grey: #7F8C8D;
$grayMediumLight: #eaeaea;

@font-face {
    font-family: 'bariol';
    src: url('bariol_regular-webfont.eot');
    src: url('bariol_regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('bariol_regular-webfont.woff') format('woff'),
         url('bariol_regular-webfont.ttf') format('truetype'),
         url('bariol_regular-webfont.svg#bariol_regularregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@mixin blue_gradient {
  background: #3498db; /* Old browsers */
  background: -moz-linear-gradient(top, #3498db 0%, #2980b9 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3498db), color-stop(100%,#2980b9)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #3498db 0%,#2980b9 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #3498db 0%,#2980b9 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #3498db 0%,#2980b9 100%); /* IE10+ */
  background: linear-gradient(to bottom, #3498db 0%,#2980b9 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3498db', endColorstr='#2980b9',GradientType=0 ); /* IE6-9 */
}

@mixin box_sizing {
  -moz-box-sizing: border-box; 
  -webkit-box-sizing: border-box; 
  box-sizing: border-box;
}

@mixin text_shadow {
  text-shadow: $dark-blue -1px -1px;
}

@mixin box_shadow {
  box-shadow: 0 1px $light-blue, 0 -2px $dark-blue;
}

body {
  font-family: 'Lato', Helvetica, sans-serif;
}

/* spacing */
$large-space: 20px;
$medium-space: 10px;
$small-space: 5px;

.navbar {
  background: $dark-blue;
}

/* button styles */
.titlebar {
  padding: $large-space;
  margin-bottom: $large-space;
  @include blue_gradient;
  @include text_shadow;
  @include box_shadow;
  .logo {
    text-align: center;
    img {
      position: relative;
      top: $large-space;
      right: $large-space;
    }
  }
  h1 {
    font-family: "bariol";
    font-size: 100px;
    line-height: 1em;
    color: $light-white;
  }
  h2 {
    color: $light-yellow;
  }
}

body {
  padding-top: 40px; /*to account for fixed nav */
}

#carousel {
  margin-right: -$large-space;
  margin-left: -$large-space;
  margin-top: -19px;
  .item {
    height: 500px;
  }
}

.ashley-btn {
  border: none;
  background: $dark-yellow;
  color: white;
  font-size: 16.5px;
  text-decoration: none;
  text-shadow: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  -webkit-transition: 0.25s;
  -moz-transition: 0.25s;
  -o-transition: 0.25s;
  transition: 0.25s;
  -webkit-backface-visibility: hidden;
  padding: $medium-space;
  display: block;
  &:hover{
    background: $light-yellow;
    color: $light-orange;
  }
}

.question-opts {
  .btn.active {
    @extend .btn-success;
  }
}

section {
  vertical-align: middle;
  margin: $large-space;
  h3 {
    color: $dark-blue;
  }
  div {
    padding: 0 $large-space;
    text-align: center;
  }
  div:nth-child(2){
    border-right: $small-space dotted $dark-white;
    border-left: $small-space dotted $dark-white;
  }
}

footer {
  background-color: $dark-grey;
  color: $light-white;
  padding: $medium-space;
}

/* flat ui login form */
.login-form {
  background-color: $light-orange;
  border-radius: $medium-space;
  padding: $large-space;
  color: $light-white;
  text-align: center;
  h3 {
    padding: 0;
    margin: 0;
  }
  .btn {
    margin-bottom: $medium-space;
  }
}
.login-form .login-field {
  border-color: transparent;
  padding: $large-space $medium-space;
  background-color: $light-white;
  color: $light-grey;
  display: block;
}

#error_explanation {
  color: #f00;
  text-align: left;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .control-group;
  @extend .error;
}

/* sticky footer */
html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by it's height */
  margin: 0 auto -60px;
}

/* Set the fixed height of the footer here */
#push,
footer {
  height: 60px;
}

/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
  footer {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
  }
}

/* clear fix */
.group:before,
.group:after  {
  content: "";
  display: table;
}
.group:after {
  clear: both;
}
.group {
  zoom: 1; /* IE6&6 */
}



/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

#github {
  position: absolute; top: 0; left: 0; border: 0;
  z-index: 3;
}

.navbar {
  z-index: 1;
}

